    * Support for legacy jabberd 1.0 server to server communication is now
      disabled by default as it has no protection against identity spoofing.
    * Jabberd14 now supports clustering of the s2s component. The distribution
      among the components for incoming connections has to be managed using
      DNS records. For outgoing connections the DNS resolver (dnsrv) is
      responsible for distributing the connections among the components.
    * Better XMPP compatibility: JIDs are prepared by the applicable
      stringprep profiles; internationalized domain names (IDNs) are
      supported; subscription state changes are only made if allowed, contacts
      cannot push themself on a user's roster; correct stanza errors are
      created.
    * Jabberd14 now supports encrypted connections using the STARTTLS
      stream feature of XMPP.
    * The welcome and the auto-reply message in the jabberd14 configuration
      file can be configured in additional languages and an XMPP compatible
      client will display the appropriate version.
    * The xdb_file module allows two directory layouts. The classic jabberd14
      layout with one big directory containing all files for one domain, and
      the layout adopted from wpjabber, where the files are distributed over
      256 * 256 different directories, improoving performance on filesystems,
      that are not well suited for large directories.
    * The size of the files handled by xdb_file can be limited. This prevents
      spool files from getting to big if a user subscribes to a feed and stops
      using his account. Incoming messages will get bounced with an error if
      the spool file of this user is full.
    * jabberd14 now detects HTTP requests and bounces the user to a configured
      URI. This might be especially useful for Jabber servers running on
      port 80.
    * jabberd14 has a new xdb module for storing data in SQL databases,
      currently only mysql is supported yet